improve(stroke-menus-style): prevent active-trail stroke, increase contrast
Related to CAM-5612

--- a/styles/_menu.less
+++ b/styles/_menu.less
@@ -77,12 +77,9 @@
         border-left: 3px solid transparent;
         color: @text-color;
       }
-      &:hover > a {
+      > a:hover {
         border-left-color: @link-color;
         color: @gray-base;
-      }
-      &.active-trail > a {
-        color: @gray-dark;
       }
       &.active > a {
         border-left-color: @brand-primary;
