--- a/styles/_page-toc.less
+++ b/styles/_page-toc.less
@@ -45,12 +45,9 @@
       border-left: 3px solid transparent;
       color: @text-color;
     }
-    &:hover > a {
+    > a:hover {
       border-left-color: @link-color;
       color: @gray-base;
-    }
-    &.active-trail > a {
-      color: @gray-dark;
     }
     &.open > a {
       border-left-color: @brand-primary;
